<resources>
    <string name="app_name">TimeRide</string>
    <string name="Profile">Profile</string>
    <string name="Home">Home</string>
    <string name="Map">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Log_in">Log in</string>
    <string name="Working">Working</string>
    <string name="Stoped">Stopped</string>
    <string name="Forgot_password">Forgot password?</string>
    <string name="Sign_up">Don\'t have an account? Sign up</string>
    <string name="Forgot_recover">Forgotten your password?</string>
    <string name="Recover">Enter your email address and we\'ll send you a link to get back into your account.</string>
    <string name="Send">Send LogIn Link</string>
    <string name="Create_account">Create New Account</string>
    <string name="Back_LogIN">Back to Login </string>
    <string name="repeat_password">Repeat Password</string>
    <string name="Username">Username</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Edit">Edit Profile</string>
    <string name="Add_friends">Add Friends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Settings">Settings</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="Account">Account</string>
    <string name="Language">Language</string>
    <string name="Notifications">Notifications</string>
    <string name="About">About us</string>
    <string name="Log_Out">Log Out</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log Out</string>
    <string name="Account_settings">Account &amp;Settings</string>
    <string name="Account_created">Account created successfully</string>
    <string name="Authentication_failed">Authentication failed.</string>
    <string name="Resum">RESUME</string>
    <string name="Starrt">START</string>
    <string name="Pause">PAUSE</string>
    <string name="nom_usuari">Nom Usuari</string>
    <string name="rutes_guardades">Routes saved</string>
    <string name="rutes_preferides">Favorite Routes</string>
    <string name="tancar_sessio">Log Out</string>
    <string name="usuari_creat_correctament">User created correctly</string>
    <string name="empty_fields">All fields are mandatory</string>
    <string name="Communicate">Communicate</string>
    <string name="Share">Share</string>
    <string name="rate">Rate us</string>
    <string name="search_hint">Search Routes</string>
    <string name="Recover_Password">An email has been sent to recover your password</string>
    <string name="Registered_email">Please introduce a registered email</string>
    <string name="Incorrect_login">Incorrect user or password</string>
    <string name="User_password">Introduce user and password</string>
    <string name="Catalan">Catalan</string>
    <string name="Spanish">Spanish</string>
    <string name="English">English</string>
    <string name="Chooselanguage">Choose language</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="All">All</string>
    <string name="Friends">Friends</string>
    <string name="None">None</string>
    <string name="ChooseNotifications">Choose Notifications</string>
    <string name="OurSocialMedia">Our Social Media</string>
    <string name="selectModality">"Select Modality "</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="Cancel_Route">CANCEL </string>
    <string name="Post_Route">POST ROUTE</string>
    <string name="Allow_Notifications">Allow notifications</string>
    <string name="weather_output">The weather in %1$s is %2$s and the temperature is %3$s°C.</string>
    <string name="weather">Weather</string>
    <string name="lowercase">Password must have a lowercase letter</string>
    <string name="uppercase">Password must have an uppercase letter</string>
    <string name="number">Password must have a number</string>
    <string name="characheters">Password must have 8 characters</string>
    <string name="passwords">Passwords must match</string>
    <string name="Location">Search by Location</string>
    <string name="Phone">Phone</string>
    <string name="Save">Save Profile</string>
    <string name="Change_photo">Change profile photo</string>
    <string name="Name">Name</string>
    <string name="Tags">Tags</string>
    <string name="Enter_tags">Enter Tags</string>
    <string name="Image">Image</string>
    <string name="commentsTittle">Comments</string>
    <string name="registerName">Name must contain at least 3 characters</string>
    <string name="registerUsername">Username must contain at least 5 characters</string>
    <string name="registerMail">Invalid email</string>
    <string name="commentPost">Write a comment</string>
    <string name="comment">Comment</string>
    <string name="No_Routes">No Routes available</string>
    <string name="Fail_Response">Fail to get response</string>
    <string name="Website">Website</string>
    <string name="Invalid_data">Invalid data</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_message">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="Delete">Delete</string>
    <string name="City">City</string>
    <string name="Occupation">Occupation</string>
    <string name="Updated_Profile">Updated Profile</string>
    <string name="Error_Update">Error Updating Profile</string>
    <string name="Route_Created" translatable="false">Route created correctly</string>
    <string name="Deleted_Profile">Deleted Profile</string>
    <string name="Error_Delete">Error Deleting Profile</string>
    <string name="register_error">Error Creating User</string>
    <string name="email_not_registered">Email not registered</string>
    <string name="now">Now</string>
    <string name="deleted_user">Deleted User</string>

</resources>