<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/userProfileLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:padding="2dp"
        android:src="@drawable/ic_profile" />

    <TextView
        android:id="@+id/changephoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:hint="@string/Change_photo"
        android:textColor="#009688"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/changephoto"
        android:layout_marginTop="24dp"
        android:hint="@string/Name"
        android:textColor="#333333"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user"
        android:layout_marginTop="16dp"
        android:hint="@string/City"
        android:textColor="#333333"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/occupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/city"
        android:layout_marginTop="16dp"
        android:hint="@string/Occupation"
        android:textColor="#333333"
        android:textSize="16sp" />


    <Button
        android:id="@+id/saveProfileButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/occupation"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Save"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/DeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/saveProfileButton"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Delete"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="#FF2323" />

</RelativeLayout>
